updated margin of quiz_title on trivia_game.html page. it was being covered by the newly fixed navbar, all corrected now.

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header {
   text-align: center;
   font-family: "JetBrains Mono", monospace;
   font-weight: 700;
-  margin-top: 20px;
+  margin-top: 70px;
   font-size: 24px;
 }
 
